--- a/practice1/index.html
+++ b/practice1/index.html
@@ -2,18 +2,17 @@
 <html lang="en">
 
 <head>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.2.0/p5.js"></script>
+  <title>History Golf</title>
   <link rel="stylesheet" type="text/css" href="../../CSS/style.css">
   <meta charset="utf-8">
 
 </head>
 
 <body>
-  <script src="sketch.js"></script>
+  <div class="output"> </div>
   <script src="../data/world_events.js"></script>
-
-
-
+  <script src="../libraries/rn_utils.js"></script>
+  <script src="practice1.js"></script>
 
 </body>
 
