--- a/practice1/index.html
+++ b/practice1/index.html
@@ -9,6 +9,11 @@
 </head>
 
 <body>
+  <header>
+    <h1>WORLD EVENTS - PRACTICE</h1>
+    <span id="gentag">PICK THE TIME</span>
+  </header>
+
   <div class="output"> </div>
   <script src="../data/world_events.js"></script>
   <script src="../libraries/rn_utils.js"></script>
