--- a/practice1/index.html
+++ b/practice1/index.html
@@ -11,7 +11,7 @@
 <body>
   <header>
     <h1>WORLD EVENTS - PRACTICE</h1>
-    <span id="gentag">PICK THE TIME</span>
+    <!--span id="gentag">PICK THE TIME</span -->
   </header>
 
   <div class="output"> </div>
