--- a/practice1/index.html
+++ b/practice1/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>History Golf</title>
-  <link rel="stylesheet" type="text/css" href="/CSS/style.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
   <meta charset="utf-8">
 
 </head>
