--- a/practice1/index.html
+++ b/practice1/index.html
@@ -15,7 +15,7 @@
   </header>
 
   <div class="output"> </div>
-  <script src="../data/world_events.js"></script>
+  <script src="../data/eventsDB.js"></script>
   <script src="../libraries/rn_utils.js"></script>
   <script src="practice1.js"></script>
 
