--- a/quando/index.html
+++ b/quando/index.html
@@ -12,11 +12,12 @@
 <body>
   <div id="container">
     <div id="game">
+      <h1>QUANDO</h1>
       <header>
         <span class="fa-icon">
           <i class="far fa-question-circle" id="help"></i>
         </span>
-        <h1>WORLD EVENTS</h1>
+        <h2>WORLD EVENTS</h2>
         <span class="fa-icon">
           <i class="fas fa-chart-bar" id="stats"></i>
           <i class="fa-solid fa-gear" id="game-options"></i>
@@ -29,7 +30,7 @@
 
   <script src="../data/eventsDB.js"></script>
   <script src="../libraries/rn_utils.js"></script>
-  <script src="practice1.js"></script>
+  <script src="quando.js"></script>
 
   <div id="help-modal" class="modal">
     <!-- Modal content -->
@@ -71,7 +72,6 @@
   </div>
 
   <div id="options-modal" class="modal">
-    <!-- Modal content -->
     <div id="options-modal-content" class="modal-content">
       <span class="close" id="close-options">&times;</span>
     </div>
