--- a/quando/index.html
+++ b/quando/index.html
@@ -17,7 +17,7 @@
         <span class="fa-icon">
           <i class="far fa-question-circle" id="help"></i>
         </span>
-        <h2>WORLD EVENTS</h2>
+        <h2 id="h2-game-category">WORLD EVENTS</h2>
         <span class="fa-icon">
           <i class="fas fa-chart-bar" id="stats"></i>
           <i class="fa-solid fa-gear" id="game-options"></i>
