--- a/quando/index.html
+++ b/quando/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <div id="container">
-    <div id="game">
+    <div id="game-head">
       <h1>QUANDO</h1>
       <header>
         <span class="fa-icon">
