--- a/quando/index.html
+++ b/quando/index.html
@@ -5,6 +5,7 @@
   <script src="https://kit.fontawesome.com/4b10fd9b7c.js" crossorigin="anonymous"></script>
   <title>History Golf</title>
   <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="stdstyle.css">
   <meta charset="utf-8">
 
 </head>
