--- a/quando/index.html
+++ b/quando/index.html
@@ -5,9 +5,8 @@
   <script src="https://kit.fontawesome.com/4b10fd9b7c.js" crossorigin="anonymous"></script>
   <title>History Golf</title>
   <link rel="stylesheet" type="text/css" href="style.css">
-  <link rel="stylesheet" type="text/css" href="stdstyle.css">
+  <link rel="stylesheet" type="text/css" href="../CSS/common.css">
   <meta charset="utf-8">
-
 </head>
 
 <body>
