--- a/golf/index.html
+++ b/golf/index.html
@@ -13,8 +13,8 @@
 <body>
   <h1>History Golf</h1>
   <div class="card-row">
-    <div class="card">
-      <h2>An event that happened closest to this year?</h2>
+    <div class="card slate">
+      <h2>An event that happened closest to...</h2>
       <div class="card-container" id="qCard">
       </div>
     </div>
