--- a/golf/index.html
+++ b/golf/index.html
@@ -12,13 +12,13 @@
 
 <body>
   <h1>History Golf</h1>
-  <div class="card-row">
+  <!-- <div class="card-row">
     <div class="card slate">
       <h2>An event that happened closest to...</h2>
       <div class="card-container" id="qCard">
       </div>
     </div>
-  </div>
+  </div> -->
 
   <div class="output"> </div>
 
