Golf has tallymarks

--- a/golf/index.html
+++ b/golf/index.html
@@ -24,6 +24,7 @@
 
   <script src="../data/eventsDB.js"></script>
   <script src="../libraries/rn_utils.js"></script>
+  <script src="../libraries/qa_mechanics.js"></script>
   <script src="golf.js"></script>
 
 
