--- a/quando/index.html
+++ b/quando/index.html
@@ -31,8 +31,8 @@
 
   <script src="../data/eventsDB.js"></script>
   <script src="../libraries/rn_utils.js"></script>
+  <script src="../libraries/qa_mechanics.js"></script>
   <script src="q_modals.js"></script>
-  <script src="qa_mechanics.js"></script>
   <script src="quando.js"></script>
 
   <div id="help-modal" class="modal">
