--- a/durato/index.html
+++ b/durato/index.html
@@ -2,36 +2,21 @@
 <html lang="en">
 
 <head>
-  <title>Games of History</title>
+  <title>Durato: Game of Historical Durations</title>
   <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="../CSS/common.css">
   <meta charset="utf-8">
-
 </head>
 
 <body>
-  <div class="card-row">
+  <script src="../data/durationsDB.js"></script>
+  <script src="../libraries/rn_utils.js"></script>
+  <script src="../libraries/qa_mechanics.js"></script>
+  <script src="durato.js"></script>
 
-    <div class="card" onclick="location.href='quando/index.html';">
-      <div class="card-container">
-        <h1><b>Quando</b></h1>
-        <h2>When did this happen?</h2>
-      </div>
-    </div>
-    <div class="card" onclick="location.href='durato/index.html';">
-      <div class="card-container">
-        <h1><b>Durato</b></h1>
-        <h2>Start and End of events</h2>
-      </div>
-    </div>
+  <div class="output"> </div>
 
-    <div class="card" onclick="location.href='golf/index.html';">
-      <div class="card-container">
-        <h1><b>History Golf</b></h1>
-        <h2>Name an Event closest to given Year</h2>
-      </div>
-    </div>
 
-  </div>
 </body>
 
 </html>
