--- a/index.html
+++ b/index.html
@@ -4,28 +4,36 @@
 <head>
   <title>Games of History</title>
   <link rel="stylesheet" type="text/css" href="CSS/cards.css">
-  <link rel="stylesheet" type="text/css" href="style.css">
   <meta charset="utf-8">
 
 </head>
 
 <body>
-  <div class="card-row">
+  <div class="card-box">
 
-    <div class="card" onclick="location.href='quando/index.html';">
+    <div class="card center slate hover wide" onclick="location.href='estudio/index.html';">
+      <div class="card-container">
+        <h1><b>Estudio</b></h1>
+        <h2>Learn and Review</h2>
+      </div>
+    </div>
+
+
+    <div class="card center slate hover wide" onclick="location.href='quando/index.html';">
       <div class="card-container">
         <h1><b>Quando</b></h1>
         <h2>When did this happen?</h2>
       </div>
     </div>
-    <div class="card" onclick="location.href='durato/index.html';">
+
+    <div class="card slate center hover wide" onclick="location.href='durato/index.html';">
       <div class="card-container">
         <h1><b>Durato</b></h1>
         <h2>Start and End of events</h2>
       </div>
     </div>
 
-    <div class="card" onclick="location.href='golf/index.html';">
+    <div class="card slate center hover wide" onclick="location.href='golf/index.html';">
       <div class="card-container">
         <h1><b>History Golf</b></h1>
         <h2>Name an Event closest to given Year</h2>
