--- a/quando/index.html
+++ b/quando/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <script src="https://kit.fontawesome.com/4b10fd9b7c.js" crossorigin="anonymous"></script>
-  <title>History Golf</title>
+  <title>Quando: When in History?</title>
   <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="stylesheet" type="text/css" href="../CSS/common.css">
   <meta charset="utf-8">
