--- a/estudio/index.html
+++ b/estudio/index.html
@@ -27,27 +27,7 @@
     </div>
   </div>
 
-  <div class="output">
-
-    <!-- <div class="maincontainer">
-      <div id="reviewcard" onclick="myFlipFunction()">
-
-        <!-- <div class="review-front">
-          <h1>Front of Card</h1>
-          <p>This is the front of the card. It contains important information. Please see overleaf for more
-            details.</p>
-        </div>
-
-        <div class="review-back">
-          <h1>Back of Card</h1>
-          <p>Your use of this site is subject to the terms and conditions governing this and all transactions.</p>
-          <button>Submit</button>
-        </div> -->
-
-    <!-- </div>
-    </div> --> -->
-
-
+  <div class="mainstudio">
   </div>
 
   <script src="../data/eventsDB.js"></script>
