Estudio subset by category

--- a/estudio/index.html
+++ b/estudio/index.html
@@ -6,6 +6,8 @@
   <title>Estudio: Learn and Practice</title>
   <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="stylesheet" type="text/css" href="../CSS/common.css">
+  <link rel="stylesheet" type="text/css" href="../CSS/cards.css">
+
   <meta charset="utf-8">
 </head>
 
@@ -18,7 +20,7 @@
           <i class="fa-solid fa-bars" id="settings" title="Settings"></i>
           <i class="far fa-question-circle" title="Help" id="help"></i>
         </span>
-        <h2 id="h2-game-category">WORLD EVENTS</h2>
+        <h2 id="h2-game-category">ALL EVENTS</h2>
         <span class="fa-icon">
           <i class="fas fa-chart-bar" id="stats" title="Stats"></i>
           <i class="fa-solid fa-gear" id="game-options" title="Game Options"></i>
